...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addedit_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addedit_transaction_amount_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addedit_transaction_concept"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addedit_transaction_concept_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.tiper.MaterialSpinner
                        android:id="@+id/addedit_transaction_from_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/transaction_from_account"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
...
                        android:layout_marginTop="15dp"
                        android:visibility="gone"
                        android:hint="@string/transaction_to_account"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
...

                    <com.tiper.MaterialSpinner
                        android:id="@+id/addedit_transaction_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <RelativeLayout
                        android:id="@+id/addedit_transaction_more_options_toggle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:layout_marginVertical="26dp">
                        <TextView
                            android:id="@+id/addedit_transaction_more_options_text"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_toStartOf="@id/addedit_transaction_more_options_arrow"
                            android:layout_alignParentStart="true"
                            android:text="@string/show_more_options" />
                        <ImageView
                            android:id="@+id/addedit_transaction_more_options_arrow"
...
                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/addedit_transaction_more_options_container"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
...

                        <com.tiper.MaterialSpinner
                            android:id="@+id/addedit_transaction_currency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/addedit_transaction_notes_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/addedit_transaction_mark_as_done"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addedit_transaction_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
