...
    <string name="account_balance_end_of_month">End of month</string>
    <string name="pending_transactions">Pending transactions</string>
    <string name="unresolved_transactions">Unresolved transactions</string>
    <string name="account_balance_not_included_legend">are not included on the accumulated balance.</string>
    <string name="wip">Work in progress</string>

    <string name="transaction_new_expense">New expense</string>

    <!-- Transaction AddEdit -->
    <string name="transaction_modify_expense">Modify expense</string>
    <string name="transaction_new_income">New income</string>
    <string name="transaction_modify_income">Modify income</string>
    <string name="transaction_new_transfer">New transfer</string>
    <string name="transaction_modify_transfer">Modify transfer</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_concept">Concept</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_specify_time">Specify time</string>
    <string name="transaction_from_account">From account</string>
    <string name="create_new_account">Create new account</string>
...
    <string name="transaction_currency">Currency</string>
    <string name="transaction_exchange_rate_info">If the currency doesn\'t match the account\'s one, an approximated exchange rate will be used during balance calculation.</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_notes">Additional notes</string>
    <string name="transaction_mark_as_done">Mark as done</string>
    <string name="transaction_mark_as_recurrent" tools:keep="@string/transaction_mark_as_recurrent">Mark as recurrent</string>
    <string name="transaction_error_concept">Transaction concept can\'t be empty.</string>

    <string name="transaction_error_amount">Specified amount is not a valid number.</string>
    <string name="transaction_error_date">Transaction must happen after account creation date.</string>
    <string name="transaction_error_account">Account can\'t be null</string>
    <string name="transaction_error_category">Category can\'t be null</string>
    <string name="transaction_error_transfer_destination_account">Origin and destination accounts can\'t be the same.</string>
    <string name="transaction_message_saved">Your transaction was saved correctly.</string>
    <string name="transaction_message_updated">Your transaction was updated correctly.</string>
    <string name="transaction_card_delete">Delete transaction</string>

    <!-- Transactions list  -->
...
