package io.github.alansanchezp.gnomy.transaction;

import android.content.Intent;
import android.content.pm.ActivityInfo;

import com.google.android.material.textfield.TextInputEditText;

import org.junit.BeforeClass;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.ArrayList;
import java.util.List;
import java.util.Objects;

import androidx.arch.core.executor.testing.InstantTaskExecutorRule;
import androidx.lifecycle.MutableLiveData;
import androidx.test.annotation.UiThreadTest;
import androidx.test.core.app.ActivityScenario;
import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.Espresso;
import androidx.test.espresso.NoMatchingViewException;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.platform.app.InstrumentationRegistry;
import io.github.alansanchezp.gnomy.R;
import io.github.alansanchezp.gnomy.data.account.Account;
import io.github.alansanchezp.gnomy.data.account.AccountRepository;
import io.github.alansanchezp.gnomy.data.category.Category;
import io.github.alansanchezp.gnomy.data.category.CategoryRepository;
import io.github.alansanchezp.gnomy.data.transaction.MoneyTransaction;
import io.github.alansanchezp.gnomy.data.transaction.MoneyTransactionRepository;
import io.github.alansanchezp.gnomy.ui.transaction.AddEditTransactionActivity;
import io.github.alansanchezp.gnomy.util.BigDecimalUtil;
import io.github.alansanchezp.gnomy.util.ColorUtil;
import io.github.alansanchezp.gnomy.util.CurrencyUtil;
import io.github.alansanchezp.gnomy.util.DateUtil;
import io.github.alansanchezp.gnomy.util.GnomyCurrencyException;
import io.reactivex.Single;

import static androidx.lifecycle.Lifecycle.State.DESTROYED;
import static androidx.lifecycle.Lifecycle.State.RESUMED;
import static androidx.test.core.app.ActivityScenario.launch;
import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.isDialog;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.isChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.isNotChecked;
import static androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static io.github.alansanchezp.gnomy.EspressoTestUtil.END_ICON;
import static io.github.alansanchezp.gnomy.EspressoTestUtil.ERROR_ICON;
import static io.github.alansanchezp.gnomy.EspressoTestUtil.assertActivityState;
import static io.github.alansanchezp.gnomy.EspressoTestUtil.assertThrows;
import static io.github.alansanchezp.gnomy.EspressoTestUtil.clickIcon;
import static io.github.alansanchezp.gnomy.EspressoTestUtil.nestedScrollTo;
import static io.github.alansanchezp.gnomy.EspressoTestUtil.setChecked;
import static io.github.alansanchezp.gnomy.data.MockRepositoryBuilder.initMockRepository;
import static io.github.alansanchezp.gnomy.data.transaction.MoneyTransaction.EXPENSE;
import static io.github.alansanchezp.gnomy.data.transaction.MoneyTransaction.INCOME;
import static io.github.alansanchezp.gnomy.data.transaction.MoneyTransaction.TRANSFER;
import static io.github.alansanchezp.gnomy.ui.category.CategoryIconsRecyclerViewAdapter.DEFAULT_RES_NAME;
import static org.hamcrest.CoreMatchers.allOf;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertNotEquals;
import static org.mockito.ArgumentMatchers.any;
import static org.mockito.ArgumentMatchers.anyInt;
import static org.mockito.Mockito.when;

/**
 * Instrumented test, which will execute on an Android device.
 *
 * @see <a href="http://d.android.com/tools/testing">Testing documentation</a>
 */
@RunWith(AndroidJUnit4.class)
public class AddEditTransactionInstrumentedTest {
    @Rule
    public final ActivityScenarioRule<AddEditTransactionActivity> activityRule =
            new ActivityScenarioRule<>(AddEditTransactionActivity.class);
    @Rule
    public InstantTaskExecutorRule instantTaskExecutorRule = new InstantTaskExecutorRule();
    private static final MoneyTransactionRepository mockTransactionRepository = initMockRepository(MoneyTransactionRepository.class);
    private static MutableLiveData<List<Account>> testAccountListLD;
    private static MutableLiveData<List<Category>> testCategoryListLD;
    private static final List<Account> testAccountList = new ArrayList<>();
    private static final List<Category> testCategoryList = new ArrayList<>();
    private static Account testAccountA, testAccountB;
    private static Category testCategory;

    @BeforeClass
    public static void init_mocks() {
        final AccountRepository mockAccountRepository = initMockRepository(AccountRepository.class);
        final CategoryRepository mockCategoryRepository = initMockRepository(CategoryRepository.class);

        testAccountA = new Account(1);
        testAccountA.setName("Test account A");
        testAccountA.setDefaultCurrency("MXN");
        testAccountA.setCreatedAt(DateUtil.OffsetDateTimeNow().minusMonths(1));
        testAccountB = new Account(2);
        testAccountB.setName("Test account B");
        testAccountB.setDefaultCurrency("EUR");
        testAccountB.setCreatedAt(DateUtil.OffsetDateTimeNow().plusMonths(1));
        testAccountList.add(testAccountA);
        testAccountList.add(testAccountB);

        testAccountListLD = new MutableLiveData<>(testAccountList);

        testCategory = new Category();
        testCategory.setName("Test category");
        testCategory.setId(2);
        Category anotherCategory = new Category();
        anotherCategory.setName("Another category");
        anotherCategory.setId(1);

        testCategoryList.add(anotherCategory);
        testCategoryList.add(testCategory);

        testCategoryListLD = new MutableLiveData<>(testCategoryList);

        when(mockTransactionRepository.insert(any(MoneyTransaction.class)))
                .thenReturn(Single.just(1L));
        when(mockAccountRepository.getAll())
                .thenReturn(testAccountListLD);
        when(mockCategoryRepository.getSharedAndCategory(anyInt()))
                .thenReturn(testCategoryListLD);
    }

    @Test
    public void text_fields_trigger_error_if_empty() {
        onView(withId(R.id.addedit_transaction_amount_input))
                .perform(typeText("40"))
                .perform(replaceText(""));

        onView(withId(R.id.addedit_transaction_amount))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_amount)
                )));

        onView(withId(R.id.addedit_transaction_concept_input))
                .perform(typeText("Test"))
                .perform(replaceText(""));

        onView(withId(R.id.addedit_transaction_concept))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_concept)
                )));
    }


    @Test
    public void text_fields_do_not_trigger_error_on_rotation_if_pristine() {
        activityRule.getScenario().onActivity(activity -> {
            activity.setRequestedOrientation(ActivityInfo.SCREEN_ORIENTATION_LANDSCAPE);
            activity.setRequestedOrientation(ActivityInfo.SCREEN_ORIENTATION_PORTRAIT);
        });

        onView(withId(R.id.addedit_transaction_concept))
                .check(matches(not(hasDescendant(
                        withText(R.string.transaction_error_concept)
                ))));

        onView(withId(R.id.addedit_transaction_amount))
                .check(matches(not(hasDescendant(
                        withText(R.string.transaction_error_amount)
                ))));
    }

    @Test
    public void text_fields_keep_errors_on_rotation_if_not_pristine() {
        onView(withId(R.id.addedit_transaction_concept_input))
                .perform(replaceText("test"))
                .perform(replaceText(""));

        onView(withId(R.id.addedit_transaction_amount_input))
                .perform(replaceText("40"))
                .perform(replaceText(""));

        activityRule.getScenario().onActivity(activity -> {
            activity.setRequestedOrientation(ActivityInfo.SCREEN_ORIENTATION_LANDSCAPE);
            activity.setRequestedOrientation(ActivityInfo.SCREEN_ORIENTATION_PORTRAIT);
        });

        onView(withId(R.id.addedit_transaction_concept))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_concept)
                )));

        onView(withId(R.id.addedit_transaction_amount))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_amount)
                )));
    }

    @Test
    public void prompts_error_if_text_fields_empty_when_form_is_submitted() {
        onView(withId(R.id.addedit_transaction_FAB))
                .perform(click());

        onView(withId(R.id.addedit_transaction_concept))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_concept)
                )));

        onView(withId(R.id.addedit_transaction_amount))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_amount)
                )));

        onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_account)
                )));

        onView(withId(R.id.addedit_transaction_category))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_error_category)
                )));
    }

    @Test
    public void FAB_finishes_activity_if_data_is_correct() {
        onView(withId(R.id.addedit_transaction_concept_input))
                .perform(replaceText("test"));

        onView(withId(R.id.addedit_transaction_amount_input))
                .perform(replaceText("40"));

        onView(withId(R.id.addedit_transaction_from_account)).perform(click());
        onData(allOf(is(instanceOf(Account.class)), is(
                testAccountB)))
                .perform(click());

        onView(withId(R.id.addedit_transaction_category)).perform(click());
        onData(allOf(is(instanceOf(Category.class)), is(
                testCategory)))
                .perform(click());

        onView(withId(R.id.addedit_transaction_FAB))
                .perform(click());

        assertActivityState(DESTROYED, activityRule);
    }

    @Test
    public void not_number_on_amount() {
        onView(withId(R.id.addedit_transaction_amount_input))
                .perform(replaceText("ñ"));

        onView(withId(R.id.addedit_transaction_amount_input))
                .check(matches(withText("")));

        assertThrows(RuntimeException.class,
                () -> onView(withId(R.id.addedit_transaction_amount_input))
                        .perform(typeText("ñ")));
    }

    @Test
    @UiThreadTest
    public void not_crashing_if_empty_accounts_list() {
        // Not testing empty categories list since that should NEVER happen
        //  and it's the repository's duty to guarantee that
        // Try using both empty list and null list
        testAccountList.clear();
        testAccountListLD.postValue(testAccountList);
        testAccountListLD.postValue(null);
        // Reset for other tests
        testAccountList.add(testAccountA);
        testAccountList.add(testAccountB);
        testAccountListLD.postValue(testAccountList);
    }

    @Test
    public void sets_currency_from_selected_account() throws GnomyCurrencyException {
        onView(withId(R.id.addedit_transaction_from_account))
                .perform(click());
        onData(allOf(is(instanceOf(Account.class)), is(
                testAccountB)))
                .perform(click());
        onView(withId(R.id.addedit_transaction_currency))
                .check(matches(
                        hasDescendant(withText(CurrencyUtil.getDisplayName(
                                testAccountB.getDefaultCurrency())))));
    }

    @Test
    public void data_is_sent_to_repository() throws GnomyCurrencyException {
        when(mockTransactionRepository.insert(any(MoneyTransaction.class)))
                .then(invocation -> {
                    RuntimeException exception = null;
                    // I don't like this, but it was the only way I found to test this
                    MoneyTransaction sentByForm = invocation.getArgument(0);
                    if (sentByForm.getAccount() != testAccountB.getId()) exception = new RuntimeException();
                    if (sentByForm.getCategory() != testCategory.getId()) exception =  new RuntimeException();
                    if (!sentByForm.getCurrency().equals("USD")) exception =  new RuntimeException();
                    if (!sentByForm.getOriginalValue().equals(
                            BigDecimalUtil.fromString("40"))) exception =  new RuntimeException();
                    if (!sentByForm.getConcept().equals("Test concept")) exception =  new RuntimeException();
                    if (sentByForm.isConfirmed()) exception =  new RuntimeException();
                    if (!sentByForm.getNotes().equals("Test notes")) exception =  new RuntimeException();

                    if (exception == null)
                        return Single.just(1L);
                    else
                        return Single.error(exception);
                });
        // Force more options
        onView(withId(R.id.addedit_transaction_more_options_toggle))
                .perform(click());

        onView(withId(R.id.addedit_transaction_amount_input))
                .perform(typeText("40"))
                .perform(closeSoftKeyboard());
        onView(withId(R.id.addedit_transaction_concept_input))
                .perform(typeText("Test sds"))// Setting wrong value to trigger RuntimeException
                .perform(closeSoftKeyboard());
        onView(withId(R.id.addedit_transaction_from_account))
                .perform(click());
        onData(allOf(is(instanceOf(Account.class)), is(
                testAccountB)))
                .perform(click());
        onView(withId(R.id.addedit_transaction_currency))
                .perform(nestedScrollTo(), click());
        onData(allOf(is(instanceOf(String.class)), is(
                CurrencyUtil.getDisplayName("USD"))))
                .perform(click());
        onView(withId(R.id.addedit_transaction_category))
                .perform(nestedScrollTo(), click());
        onData(allOf(is(instanceOf(Category.class)), is(
                testCategory)))
                .perform(click());

        onView(withId(R.id.addedit_transaction_notes_input))
                .perform(typeText("Test notes"))
                .perform(closeSoftKeyboard());

        onView(withId(R.id.addedit_transaction_mark_as_done)) // In order to avoid coordinates errors
                .perform(nestedScrollTo(), setChecked(false));

        onView(withId(R.id.addedit_transaction_FAB))
                .perform(click());

        // These calls should only be possible if insert fails and activity is not
        //  automatically finished
        onView(withId(R.id.addedit_transaction_concept_input))
                .perform(nestedScrollTo(), click())
                .perform(replaceText("Test concept"))
                .perform(closeSoftKeyboard());
        onView(withId(R.id.addedit_transaction_FAB))
                .perform(click());

        try {
            assertActivityState(DESTROYED, activityRule);
        } catch (AssertionError e) {
            // Not sure why SOMETIMES state is DESTROYED and sometimes it's RESUMED
            assertActivityState(RESUMED, activityRule);
        }
        // return to default state
        when(mockTransactionRepository.insert(any(MoneyTransaction.class)))
                .thenReturn(Single.just(1L));
    }

    @Test
    public void dynamic_title_based_on_extras() {
        MoneyTransaction testT = new MoneyTransaction();
        testT.setType(EXPENSE);
        when(mockTransactionRepository.find(anyInt()))
                .thenReturn(new MutableLiveData<>(testT));
        // TODO: Check hints [#41]
        // Default behavior is to create a new expense. Not testing tinting since espresso
        //  doesn't provide a way to match color resources yet.
        onView(withId(R.id.custom_appbar))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_new_expense)
                )));
        /*onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(withText(
                        R.string.transaction_from_account
                ))));*/

        Intent intent = new Intent(ApplicationProvider.getApplicationContext(),
                AddEditTransactionActivity.class);
        ActivityScenario<AddEditTransactionActivity> tempScenario;

        // Modify expense
        intent = intent
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, EXPENSE)
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_ID, 2);
        tempScenario = launch(intent);
        onView(withId(R.id.custom_appbar))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_modify_expense)
                )));
        /*onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(withText(
                        R.string.transaction_from_account
                ))));*/
        tempScenario.close();

        // Create income
        intent = intent
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, INCOME)
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_ID, 0);
        tempScenario = launch(intent);
        onView(withId(R.id.custom_appbar))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_new_income)
                )));
        /*onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(withText(
                        R.string.transaction_to_account
                ))));*/
        tempScenario.close();

        testT.setType(INCOME);
        // Modify income
        intent= intent
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, INCOME)
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_ID, 2);
        tempScenario = launch(intent);
        onView(withId(R.id.custom_appbar))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_modify_income)
                )));
        /*onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(withText(
                        R.string.transaction_to_account
                ))));*/
        tempScenario.close();

        // New transfer
        intent= intent
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, TRANSFER)
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_ID, 0);
        tempScenario = launch(intent);
        onView(withId(R.id.custom_appbar))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_new_transfer)
                )));
        /*onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(withText(
                        R.string.transaction_from_account
                ))));*/
        tempScenario.close();

        testT.setType(TRANSFER);
        // Modify transfer
        intent= intent
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, TRANSFER)
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_ID, 2);
        tempScenario = launch(intent);
        onView(withId(R.id.custom_appbar))
                .check(matches(hasDescendant(
                        withText(R.string.transaction_modify_transfer)
                )));
        /*onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(withText(
                        R.string.transaction_from_account
                ))));*/
        tempScenario.close();

        // Not testing invalid types because RuntimeException can't be catched
        //  (for some weird reason)
    }

    @Test
    public void sets_account_from_extra() {
        MoneyTransaction testT = new MoneyTransaction();
        testT.setAccount(1);
        testT.setType(INCOME);
        InstrumentationRegistry.getInstrumentation().runOnMainSync(() ->
                testAccountListLD.postValue(testAccountList));
        when(mockTransactionRepository.find(anyInt()))
                .thenReturn(new MutableLiveData<>(testT));
        Intent intent = new Intent(ApplicationProvider.getApplicationContext(),
                AddEditTransactionActivity.class)
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, INCOME)
                .putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_ID, 1);
        ActivityScenario<AddEditTransactionActivity> tempScenario = launch(intent);
        onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(
                        withText(testAccountA.getName())
                )));
        tempScenario.close();
        testT.setType(EXPENSE);
        intent.putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, EXPENSE);
        tempScenario = launch(intent);
        onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(
                        withText(testAccountA.getName())
                )));
        tempScenario.close();

        testT.setType(TRANSFER);
        testT.setTransferDestinationAccount(2);
        intent.putExtra(AddEditTransactionActivity.EXTRA_TRANSACTION_TYPE, TRANSFER);
        tempScenario = launch(intent);
        onView(withId(R.id.addedit_transaction_from_account))
                .check(matches(hasDescendant(
                        withText(testAccountA.getName())
                )));
        tempScenario.close();
    }

    @Test
    public void more_options_container_is_toggled() {
        // Initial state
        onView(withId(R.id.addedit_transaction_more_options_container))
                .check(matches(withEffectiveVisibility(ViewMatchers.Visibility.GONE)));
        onView((withId(R.id.addedit_transaction_more_options_text)))
                .check(matches(withText(R.string.show_more_options)));
        // Didn't find a way to test drawable rotation
        onView(withId(R.id.addedit_transaction_more_options_toggle))
                .perform(click());
        onView(withId(R.id.addedit_transaction_more_options_container))
                .check(matches(withEffectiveVisibility(ViewMatchers.Visibility.VISIBLE)));
        onView((withId(R.id.addedit_transaction_more_options_text)))
